--- a/awwards/templates/awwards/login.html
+++ b/awwards/templates/awwards/login.html
@@ -1,7 +1,11 @@
+{% extends 'awwards/base.html' %}
+
+
+
 {% block content %}
 
     <div class="container mt-5">
-        <form>
+        <form method="post" class="form-control">
             {% csrf_token %}
 
             {% if messages %}
@@ -12,23 +16,23 @@
             <h3>Login</h3>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Username</label>
-                <input type="username" name="username" class="form-control" id="username" placeholder="name">
+                <input type="username" name="username" class="form-control" id="username" placeholder="username">
             </div>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Password</label>
-                <input type="password" name="password" class="form-control" id="password" placeholder="name">
+                <input type="password" name="password" class="form-control" id="password" placeholder="password">
             </div>
             <div class="row mt-3 mb-3">
                 <div class="col-md-6">
                     <input type="submit" value="Login" class="btn btn-login">
+                     <p class="form-control ps-5 pt-3 pb-3 pe-5">
+                        Dont have an account?  <a href="{% url 'register' %}" class="text-decoration-none">Signup</a>
+                    </p>
                 </div>
             </div>
         </form>
     </div>
-    <div class="pt-2 p-5">
-        <p class="form-control ps-5 pt-3 pb-3 pe-5">
-            Dont have an account?  <a href="#" class="text-decoration-none">Signup</a>
-        </p>
-    </div>
+    
+    
 
 {% endblock content %}
