--- a/awwards/templates/create_profile.html
+++ b/awwards/templates/create_profile.html
@@ -1,3 +1,4 @@
+{% load bootstrap3 %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -10,6 +11,10 @@
   <title>New Post</title>
   {{form.media}}
 
+{% block styles %} {% bootstrap_css %}
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+{% endblock %}
 
 </head>
 
@@ -20,7 +25,7 @@
       <form action="{% url 'create-profile'%}" method="post"  enctype="multipart/form-data">
 
         {% csrf_token%}
-        
+        {% bootstrap_form form %}
         <div class="form-group text-center">
           <input type="submit" class="btn btn-primary sign-up-button" value="Share">
         </div>
@@ -30,10 +35,8 @@
   </div>
 
    {% block scripts %}
-   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  {% endblock %}
+  {% bootstrap_javascript %} {% endblock %}
 
 </body>
 
