--- a/awwards/templates/register.html
+++ b/awwards/templates/register.html
@@ -1,10 +1,7 @@
 {% extends 'base.html' %}
-
-
-
 {% block content %}
 
-    <div class="container mt-5">
+    <div class="container mt-5 col-sm-4">
         <form method="post" class="form-control">
             {% csrf_token %}
 
@@ -13,7 +10,7 @@
                 <p>{{ message }}</p>
                 {% endfor %}
             {% endif %}
-            <h3>Register</h3>
+            <h4>Register</h4>
             {{ form.errors.as_p }}
             {{ form }}
          <input type="submit" value="Register" class="btn btn-register">
