--- a/awwards/templates/search.html
+++ b/awwards/templates/search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load bootstrap3 %}
 {% load static %}
-{% load staticfiles %}
+
 
 {% block styles%}
 {% bootstrap_css %}
@@ -16,7 +16,7 @@
   {% if projects %}
   <h2> Found {{projects|length}} projects with the search term "{{message}}"</h2>
   {% else %}
-  <h2> Found 0 projects for the search term "{{message}}"</h2>
+  <h3 class="text-center"> Found 0 projects for the search term "{{message}}"</h3>
   {% endif %}
 </div>
 
