--- a/awwards/templates/user-profile.html
+++ b/awwards/templates/user-profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load bootstrap3 %}
 {% load static %}
-{% load static %}
+{% load staticfiles %}
 
 {% block styles%}
 {% bootstrap_css %}
@@ -31,6 +31,7 @@
 </div>
 <div class="pages">
 <div class="row">
+
   {% for project in projects %}
   <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     <div class="card" style="width: 40.2rem;">
@@ -45,7 +46,14 @@
   </div>
   {% endfor %}
 
-  
+  <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+    <div class="card" style="width: 40.2rem;">
+  <img class="card-img-top img-responsive" src="{% static 'img/cocaine.png'%}" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title" style="line-height:28px;">Cocaine Route - Heart of Drugs</h5>
+    <p class="card-text">From Mexico <span class="date">November 10,2018</span></p>
+  </div>
+
 </div>
   </div>
 
@@ -71,6 +79,8 @@
 
 </div>
   </div>
+
+
 </div>
 </div>
 
