--- a/awwards/templates/directory.html
+++ b/awwards/templates/directory.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="{% static 'css/index.css' %}">
 {%endblock %}
-
+{% include 'navbar.html' %}
 {% block content %}
 
 <div class="container headers">
