--- a/awwards/templates/index.html
+++ b/awwards/templates/index.html
@@ -2,12 +2,8 @@
 
 {% load bootstrap3 %}
 {% load static %}
-{% load static %}
 
-
-<link rel="stylesheet" href="{% static 'css/index.css' %}">
-
-
+{% include 'navbar.html' %}
 {% block content %}
 
     <div class="carousel-inner">
