--- a/awwards/templates/base.html
+++ b/awwards/templates/base.html
@@ -1,35 +1,45 @@
+{% load bootstrap3 %}
 {% load static %}
-<head>
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
     {% if title %}
-    <title>Instagram - {{title}}</title>
+    <title>{{title}}</title>
     {% else %}
-
-    <title>Instagram</title>
-
+    <title>Awwwards - Website Awards - Best Web Design Trends</title>
     {% endif %}
 
-
-   {% block styles %}
-
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    {% block styles %}
+    {% bootstrap_css %}
+    <!-- <link rel="stylesheet" href="{% static 'css/navbar.css' %}"> -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
 
+    {% endblock %}
+
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+  </head>
+  <body>
+
+    
+    {% block content %}
+    <!-- <h1 class="text-center">Instagram</h1> -->
+
+    {% endblock %}
+
+    {% block scripts %}
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src= "{% static 'js/ajax.js'%}"></script> -->
+
+    {% bootstrap_javascript %}
     {% endblock %}
 
 
 
-</head>
-
-<body>
-
-    {% block content %}
-
-
-    {% endblock content%}
-
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/63fa258ca0.js" crossorigin="anonymous"></script>
-
-</body>
+  </body>
+</html>
