--- a/awwards/templates/create_profile.html
+++ b/awwards/templates/create_profile.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>New Post</title>
+  <title>Create Profile</title>
   {{form.media}}
 
 {% block styles %} {% bootstrap_css %}
