--- a/awwards/templates/base.html
+++ b/awwards/templates/base.html
@@ -25,7 +25,7 @@
   </head>
   <body>
 
-    
+    {% include 'navbar.html' %}
     {% block content %}
     <!-- <h1 class="text-center">Instagram</h1> -->
 
