--- a/awwards/templates/index.html
+++ b/awwards/templates/index.html
@@ -9,7 +9,7 @@
 
     <div class="carousel-inner">
       <div class="landingpage" >
-        <img src="{{caraousel.landing_page.url}}" class="landingpage-img">
+        <img src="{% static 'images/landing.jpg' %}" class="landingpage-img">
         <div class="time">
           <p><span class="text-center">Site of the day </span>{{date}}</p>
         </div>
@@ -47,7 +47,7 @@
     </div>
 
 <div class="container headers">
-    <h4 style="float:left;"><span class="bold" >Sites of the Day</span>  Previous Winners</h4>
+    <h4 style="float:left;"><span class="bold" >Sites of the Day</span></h4>
 </div>
 <div class="pages">
 <div class="row">
