--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,9 @@
 body{
   background-color: #f4f7f6;
 }
+.carousel-inner{
+  background-image: url('static/images/landing.jpg');
+}
 .landingpage{
   width:100%;
   height:700px;
