--- a/awwards/templates/login.html
+++ b/awwards/templates/login.html
@@ -1,6 +1,16 @@
-{% extends 'base.html' %}
-{% block content %}
+{% load static %}
+{% block styles %}
+    
+    
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
 
+{% endblock %}
+
+{% block content %}
+<div class="login">
     <div class="container mt-5 col-sm-4">
         <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
@@ -29,8 +39,9 @@
             </div>
         </form>
     </div>
-    <div class="pt-2 p-5">
-        
-    </div>
+</div>
+
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 {% endblock content %}
