--- a/awwards/templates/site.html
+++ b/awwards/templates/site.html
@@ -59,7 +59,7 @@
 <h3 class="bold">Screenshots</h3>
 
 <div class="screenshots">
-  <img class="screenshot-img img-responsive" width=8 src="{{project.screenshot1.url}}" alt="Card image cap" responsive>
+  <img class="screenshot-img img-responsive" src="{{project.screenshot1.url}}" alt="Card image cap" responsive>
   <img class="screenshot-img img-responsive" src="{{project.screenshot2.url}}" alt="Card image cap" responsive>
 </div>
 
