--- a/awwards/templates/new_project.html
+++ b/awwards/templates/new_project.html
@@ -1,4 +1,3 @@
-{% extends 'base.html'%}
 {% load bootstrap3 %}
 {% load static %}
 
@@ -21,7 +20,16 @@
 </head>
 
 <body>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">
+      <li><a href="{% url 'Index'%}">Home</a></li>
+      <li><a href="{% url 'directory'%}">Directory</a></li>
+    </ul>
+  </div>
+</nav>
 
+  <div class="container mt-4 text-center">
   <div class="panel panel-default">
     <div class="panel-body">
       <form action="{% url 'new-project'%}" method="post"  enctype="multipart/form-data">
