--- a/awwards/templates/login.html
+++ b/awwards/templates/login.html
@@ -10,9 +10,9 @@
 {% endblock %}
 
 {% block content %}
-<div class="login">
-    <div class="container mt-5 col-sm-4">
-        
+<body style="background-image: url('{% static 'images/login3.webp' %}');backckground-position: fixed;">
+<div class="login" id="login">
+    <div class="container mt-5 col-md-4" style="margin-left:300px;">
         <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
 
@@ -44,5 +44,5 @@
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-
+</body>
 {% endblock content %}
