--- a/awwards/templates/register.html
+++ b/awwards/templates/register.html
@@ -11,8 +11,9 @@
 
 {% endblock %}
 {% block content %}
+<body style="background-image: url('{% static 'images/login3.webp' %}');backckground-position: fixed;">
 
-    <div class="container mt-5 col-sm-4">
+    <div class="container mt-5 col-md-4" style="margin-left:300px;">
         <form method="post" class="form-control">
             {% csrf_token %}
 
@@ -34,6 +35,6 @@
 
 
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+</body>
 {% endblock content %}
