--- a/awwards/templates/navbar.html
+++ b/awwards/templates/navbar.html
@@ -21,9 +21,9 @@
         <div class="" >
            <ul class="nav navbar-nav">
              <li><a href="{% url 'directory'%}">Directory</a>
-             </li>
+             <!-- </li>
              <li><a href="{% url 'profile'%}">Profile</a>
-             </li>
+             </li> -->
              <li><a href="/logout">Logout</a>
              </li>
            </ul>
@@ -53,7 +53,7 @@
     </div>
   <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
     <div class="user-image" style="float:right; margin-right:105px;">
-      <a href="/user/{{profile.username}}" style="color:black;text-decoration:none;margin:auto;">
+      <a href="{% url 'profile'%}" style="color:black;text-decoration:none;margin:auto;">
         <p style="font-size: 13px; font-weight:lighter;margin:auto;text-transform:uppercase;margin-left:-20px;">{{profile.username}}</p>
       </a>
       {% if profile.avatar %}
