--- a/awwards/templates/navbar.html
+++ b/awwards/templates/navbar.html
@@ -20,12 +20,28 @@
       <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
         <div class="" >
            <ul class="nav navbar-nav">
-             <li><a href="{% url 'directory'%}">Directory</a>
-             <!-- </li>
-             <li><a href="{% url 'profile'%}">Profile</a>
-             </li> -->
-             <li><a href="/logout">Logout</a>
-             </li>
+             <li>
+                <a href="{% url 'directory'%}">Directory</a>
+             </li> 
+             <!-- 
+             <li>
+                <a href="{% url 'profile'%}">Profile</a>
+             </li> 
+            -->
+            {% if user.is_authenticated %}
+              <li>
+                <a href="{% url 'logout'%}">Logout</a>
+              </li>
+            {% else %}
+            <li>
+              <a href="{% url 'login'%}">Login</a>
+            </li>
+            <li>
+              <a href="{% url 'register'%}">Register</a>
+            </li>
+            {% endif %}
+              
+
            </ul>
 
          </div>
