--- a/awwards/templates/navbar.html
+++ b/awwards/templates/navbar.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../static/css/navbar.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
   </head>
@@ -72,6 +71,11 @@
       <a href="{% url 'profile'%}" style="color:black;text-decoration:none;margin:auto;">
         <p style="font-size: 13px; font-weight:lighter;margin:auto;text-transform:uppercase;margin-left:-20px;">{{profile.username}}</p>
       </a>
+
+      {% if profile.avatar %}
+        <img src="{{ profile.avatar.url }}" class="gallery-image" style="margin:auto;" width="8" height="8">
+      {% endif %}
+      
       <a href="{% url 'new-project' %}" >
         <button class="btn btn-success" style="height:50px;  margin-top: 10px; margin-left:20px;background-color:#49c5b6;border-radius:20;">Create New Project</button>
       </a>
