--- a/awwards/templates/index.html
+++ b/awwards/templates/index.html
@@ -4,7 +4,6 @@
 {% load static %}
 
 
-
 {% block content %}
 
     <div class="carousel-inner">
@@ -61,6 +60,7 @@
     </div>
     <div class="card-footer ">
       <div class="user-image">
+      <img src="{{winner.avatar.url}}" class="gallery-image" alt="">
       <a href="/user/{{winner.username}}" style="color:black;text-decoration:none;margin:auto;">
         <p style="font-size: 13px; font-weight: lighter;margin:auto; padding:2px;text-transform: uppercase;">{{winner.username}}</p>
       </a>
